code changes: docker-compose.yml is working now on local machine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       context: ./nginx
     ports:
       - '3050:80'
+    links:
+      - "api"
+      - "client"      
   api:
     build:
       dockerfile: Dockerfile.dev
