--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: us-west-1
-  app: multi-docker
+  app: Multi-docker
   env: MultiDocker-env
-  bucket_name: elasticbeanstalk-us-west-1-306476627547
+  bucket_name: elasticbeanstalk-us-west-1-087659596915
   bucket_path: docker-multi
   on:
     branch: master
