--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: us-west-1
-  app: Multi-docker
-  env: MultiDocker-env
+  app: Multi-docker-01
+  env: MultiDocker-01-env
   bucket_name: elasticbeanstalk-us-west-1-087659596915
   bucket_path: docker-multi
   on:
